# rainbowmist

./: .gitmodules  README.md  helper_math.h  rainbowmist.h
examples/cpp11/: Makefile  main.cc
tests/: CMakeLists.txt  README.md  alignment.kernel  main.cc  simple_add.kernel
tests/CLCudaAPI/include/: cupp11.h
tests/EasyCL/: EasyCL_export.h
tests/cuew/: README.md
tests/cuew/auto/: cuew_gen.py
tests/cuew/include/: cuew.h
tests/cuew/src/: cuew.c
